# serializer version: 1
# name: test_application_update
  Response(id='test', type='N/A', data={}, subtype=None, message='Message sent', module=None)
# ---
# name: test_exit_backend
  Response(id='test', type='N/A', data={}, subtype=None, message='Message sent', module=None)
# ---
# name: test_get_directories
  list([
  ])
# ---
# name: test_get_file
  MediaFile(name='file1', path='path/to/file1', fullpath='/full/path/to/file1', size=100, last_accessed=100.0, created=100.0, modified=100.0, is_directory=False, is_file=True, is_link=False, mime_type='text/plain')
# ---
# name: test_get_files
  MediaFiles(files=[], path='/home/user/documents')
# ---
# name: test_keyboard_keypress
  Response(id='test', type='KEYBOARD_KEY_PRESSED', data={'key': 'a'}, subtype=None, message=None, module=None)
# ---
# name: test_keyboard_text
  Response(id='test', type='KEYBOARD_TEXT_SENT', data={'text': 'test'}, subtype=None, message=None, module=None)
# ---
# name: test_media_control
  Response(id='test', type='N/A', data={}, subtype=None, message='Message sent', module=None)
# ---
# name: test_open_path
  Response(id='test', type='OPENED', data={'path': '/home/user/documents'}, subtype=None, message=None, module=None)
# ---
# name: test_open_url
  Response(id='test', type='OPENED', data={'url': 'https://www.google.com'}, subtype=None, message=None, module=None)
# ---
# name: test_power_hibernate
  Response(id='test', type='POWER_HIBERNATING', data={}, subtype=None, message=None, module=None)
# ---
# name: test_power_lock
  Response(id='test', type='POWER_LOCKING', data={}, subtype=None, message=None, module=None)
# ---
# name: test_power_logout
  Response(id='test', type='POWER_LOGGINGOUT', data={}, subtype=None, message=None, module=None)
# ---
# name: test_power_restart
  Response(id='test', type='POWER_RESTARTING', data={}, subtype=None, message=None, module=None)
# ---
# name: test_power_shutdown
  Response(id='test', type='POWER_SHUTTINGDOWN', data={}, subtype=None, message=None, module=None)
# ---
# name: test_power_sleep
  Response(id='test', type='POWER_SLEEPING', data={}, subtype=None, message=None, module=None)
# ---
# name: test_register_data_listener
  Response(id='test', type='DATA_LISTENER_REGISTERED', data={'modules': ['system']}, subtype=None, message=None, module=None)
# ---
# name: test_send_notification
  Response(id='test', type='NOTIFICATION_SENT', data={'title': 'Test', 'message': 'test', 'icon': None, 'image': None, 'actions': None, 'timeout': None, 'audio': None}, subtype=None, message=None, module=None)
# ---
